--- a/template.html
+++ b/template.html
@@ -1,21 +1,30 @@
 <!doctype html>
 <html>
   <head>
-    <title>jumbotron</title>
+    <title>RSS feed</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
-    <div class="jumbotron">
+    <div class="jumbotron mb-1">
       <h1 class="display-4">RSS feed subscription</h1>
       <p class="lead">Add new RSS feed</p>
       <hr class="m-y-2">
-      <form class="form-inline" novalidate>
+      <form class="form form-inline" novalidate>
         <div class="form-group mb-2">
           <label for="feed-name"></label>
           <input type="text" class="form-control mx-sm-3 mb-2" id="feed-name" placeholder="Input RSS here" value="">
-          <button class="btn btn-primary mb-2" type="submit">Add RSS</button>
+          <button class="btn btn-primary mb-2" type="submit" disabled>Add RSS</button>
         </div>
       </form>
     </div>
+    <div class="container-fluid"></div>
+    <!-- <ul class="list-group list-group-flush">
+      <li class="list-group-item">Cras justo odio</li>
+      <li class="list-group-item">Dapibus ac facilisis in</li>
+      <li class="list-group-item">Morbi leo risus</li>
+      <li class="list-group-item">Porta ac consectetur ac</li>
+      <li class="list-group-item">Vestibulum at eros</li>
+    </ul> -->
+
   <script type="text/javascript" src="main.js"></script></body>
 </html>
