--- a/template.html
+++ b/template.html
@@ -6,20 +6,31 @@
   </head>
   <body>
     <div class="jumbotron mb-1">
-      <h1 class="display-4">RSS feed subscription</h1>
-      <p class="lead">Add new RSS feed</p>
+      <h1 class="display-4">RSS feed aggregator</h1>
+      <p class="lead">Input RSS feed URL below</p>
       <hr class="m-y-2">
       <form class="form form-inline" novalidate>
         <div class="form-group mb-2">
           <label for="feed-name"></label>
-          <input type="text" class="form-control mx-sm-3 mb-2" id="feed-name" placeholder="Input RSS here" value="">
+          <input type="text" class="form-control mx-sm-3 mb-2" id="feed-name" placeholder="Input RSS feed URL here" value="">
           <button class="btn btn-primary mb-2" type="submit" disabled>Add RSS</button>
         </div>
       </form>
     </div>
     <div class="container-fluid"></div>
     <!-- <ul class="list-group list-group-flush">
-      <li class="list-group-item">Cras justo odio</li>
+      <li class="list-group-item">Cras justo odio
+        <ul class="list-group">
+          <li class="list-group-item pb-0 pt-0 border-0">Cras</li>
+          <li class="list-group-item pb-0 pt-0 border-0">Dapibus </li>
+        </ul>
+      </li>
+      <li class="list-group-item">Cras justo odio
+        <ul class="list-group">
+          <li class="list-group-item pb-0 pt-0 border-0">Cras</li>
+          <li class="list-group-item pb-0 pt-0 border-0">Dapibus </li>
+        </ul>
+      </li>
       <li class="list-group-item">Dapibus ac facilisis in</li>
       <li class="list-group-item">Morbi leo risus</li>
       <li class="list-group-item">Porta ac consectetur ac</li>
