add error container

--- a/template.html
+++ b/template.html
@@ -16,26 +16,8 @@
           <button class="btn btn-primary mb-2" type="submit" disabled>Add RSS</button>
         </div>
       </form>
+      <div class="error-container"></div>
     </div>
     <div class="container-fluid"></div>
-    <!-- <ul class="list-group list-group-flush">
-      <li class="list-group-item">Cras justo odio
-        <ul class="list-group">
-          <li class="list-group-item pb-0 pt-0 border-0">Cras</li>
-          <li class="list-group-item pb-0 pt-0 border-0">Dapibus </li>
-        </ul>
-      </li>
-      <li class="list-group-item">Cras justo odio
-        <ul class="list-group">
-          <li class="list-group-item pb-0 pt-0 border-0">Cras</li>
-          <li class="list-group-item pb-0 pt-0 border-0">Dapibus </li>
-        </ul>
-      </li>
-      <li class="list-group-item">Dapibus ac facilisis in</li>
-      <li class="list-group-item">Morbi leo risus</li>
-      <li class="list-group-item">Porta ac consectetur ac</li>
-      <li class="list-group-item">Vestibulum at eros</li>
-    </ul> -->
-
   <script type="text/javascript" src="main.js"></script></body>
 </html>
