--- a/template.html
+++ b/template.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>RSS feed</title>
+    <title>RSS aggregator</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
     <div class="jumbotron mb-1">
-      <h1 class="display-4">RSS feed aggregator</h1>
+      <h1 class="display-4">RSS aggregator</h1>
       <p class="lead">Input RSS feed URL below</p>
       <hr class="m-y-2">
       <form class="form form-inline" novalidate>
@@ -16,7 +16,7 @@
           <button class="btn btn-primary mb-2" type="submit" disabled>Add RSS</button>
         </div>
       </form>
-      <div class="error-container"></div>
+      <div class="alert-container"></div>
     </div>
     <div class="container-fluid"></div>
   <script type="text/javascript" src="main.js"></script></body>
