--- a/template.html
+++ b/template.html
@@ -3,9 +3,10 @@
   <head>
     <title>RSS aggregator</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://unpkg.com/feather-icons"></script>
   </head>
-  <body>
-    <div class="jumbotron mb-0 pb-2 pt-5 border">
+  <body class="bg-light">
+    <div class="jumbotron mb-0 pb-2 pt-4 border">
       <h1 class="display-4">RSS Aggr<i class="mb-1" stroke-width="3" width="31" height="31" data-feather="rss"></i>gator</h1>
       <hr class="m-y-2">
       <p><i stroke-width="2" width="16" height="16" data-feather="link"></i> Input RSS feed URL below</p>
@@ -20,7 +21,6 @@
     </div>
     <div class="accordion" id="accordion"></div>
 
-  <script src="https://unpkg.com/feather-icons"></script>
   <script type="text/javascript" src="main.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
