--- a/template.html
+++ b/template.html
@@ -17,6 +17,7 @@
           <button class="btn btn-primary mb-2" type="submit" disabled>Add RSS feed <i class="mb-1" width="18" height="18" data-feather="rss"></i></button>
         </div>
       </form>
+      <div class="error-container"></div>
       <div class="alert-container"></div>
     </div>
     <div class="accordion" id="accordion"></div>
