--- a/template.html
+++ b/template.html
@@ -6,9 +6,9 @@
     <script src="https://unpkg.com/feather-icons"></script>
   </head>
   <body class="bg-light">
-    <div class="jumbotron mb-0 pb-2 pt-4 border">
+    <div class="jumbotron mb-0 pb-2 pt-4 border d-flex flex-column align-items-center">
       <h1 class="display-4">RSS Aggr<i class="mb-1" stroke-width="3" width="31" height="31" data-feather="rss"></i>gator</h1>
-      <hr class="m-y-2">
+      <hr class="m-y-2 w-100">
       <p><i stroke-width="2" width="16" height="16" data-feather="link"></i> Input RSS feed URL below</p>
       <form class="form form-inline ml-0">
         <div class="form-group mb-2">
@@ -17,8 +17,8 @@
           <button class="btn btn-primary mb-2" type="submit" disabled>Add RSS feed <i class="mb-1" width="18" height="18" data-feather="rss"></i></button>
         </div>
       </form>
-      <div class="error-container"></div>
-      <div class="alert-container"></div>
+      <div class="error-container w-100"></div>
+      <div class="alert-container w-100"></div>
     </div>
     <div class="accordion" id="accordion"></div>
 
