change alert container width

--- a/template.html
+++ b/template.html
@@ -17,8 +17,8 @@
           <button class="btn btn-primary mb-2" type="submit" disabled>Add RSS feed <i class="mb-1" width="18" height="18" data-feather="rss"></i></button>
         </div>
       </form>
-      <div class="error-container w-100"></div>
-      <div class="alert-container w-100"></div>
+      <div class="error-container w-50 text-center"></div>
+      <div class="alert-container w-50 text-center"></div>
     </div>
     <div class="accordion" id="accordion"></div>
 
